--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,7 @@ jobs:
         java-version: '20'
         distribution: 'temurin'
         cache: maven
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        ref: ${{ github.event.inputs.branch }}
     - name: Build Project with Maven
       run: mvn clean install
     - name: Generate Java Docs
@@ -31,9 +31,7 @@ jobs:
         date > generated.txt
         git config user.name aswiinraviprakash
         git config user.email aswiinr19@gmail.com
-        git branch patch_docs
-        git checkout patch_docs
         git add .
         git commit -m "generated"
-        git push -u origin patch_docs
+        git push
 
