--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,12 +26,16 @@ jobs:
         ref: ${{ github.event.inputs.branch }}
     - name: Build Project with Maven
       run: mvn clean install
-    - name: Generate Java Docs
+    - name: Generate JavaDoc
+      run: mvn javadoc:javadoc
+    - name: GIT Push
       run: |
         date > generated.txt
         git config user.name aswiinraviprakash
         git config user.email aswiinr19@gmail.com
+        git branch patch_test
+        git checkout patch_test
         git add .
         git commit -m "generated"
-        git push
+        git push -u origin patch_test
 
