--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,9 +31,7 @@ jobs:
         mvn javadoc:javadoc
         git config user.name aswiinraviprakash
         git config user.email aswiinr19@gmail.com
-        git branch patch_test
-        git checkout patch_test
         git add .
         git commit -m "generated"
-        git push -u origin patch_test
+        git push -u origin ${{ github.event.inputs.branch }}
 
