--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,17 +23,30 @@ jobs:
         java-version: '20'
         distribution: 'temurin'
         cache: maven
-        ref: ${{ github.event.inputs.branch }}
     - name: Build Project with Maven
       run: mvn clean install
-    - name: GIT Push
-      run: |
-        mvn javadoc:javadoc
-        git config user.name aswiinraviprakash
-        git config user.email aswiinr19@gmail.com
-        git fetch
-        git checkout main
-        git add .
-        git commit -m "generated"
-        git push -u origin main
 
+  post merge process:
+
+    if: github.event.pull_request.merged == true
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 20
+        uses: actions/setup-java@v3
+        with:
+          java-version: '20'
+          distribution: 'temurin'
+          cache: maven
+      - name: Generate Java Documentation
+        run: |
+          mvn javadoc:javadoc
+          git config user.name aswiinraviprakash
+          git config user.email aswiinr19@gmail.com
+          git fetch
+          git checkout main
+          git add .
+          git commit -m "API documentation generated"
+          git push -u origin main
